# crypto-arbitrage-scanner-bot

./: .gitignore
CEX-arbitrage-oppt-scanner/: .env.example  .gitignore  README.md  main.py  requirements.txt
DEX-arbitrage-oppt-scanner/: .gitignore  README.md  bun.lockb  main.js  package.json  types.ts
DEX-arbitrage-oppt-scanner/DEX-scanner-rust/: .env  .env.example  Cargo.toml  README.md
DEX-arbitrage-oppt-scanner/DEX-scanner-rust/src/: main.rs
DEX-arbitrage-oppt-scanner/DEX-scanner-rust/src/abis/: IUniswapV2Factory.json  IUniswapV2Pair.json
DEX-arbitrage-oppt-scanner/DEX-scanner-ts/: .env.example  bun.lockb  main.ts  package.json  tsconfig.json
DEX-arbitrage-oppt-scanner/solana-dex-scanner/: .env.example  Cargo.toml  README.md
DEX-arbitrage-oppt-scanner/solana-dex-scanner/src/: main.rs
DEX-arbitrage-oppt-scanner/solana-dex-scanner/src/dex/: mod.rs  orca.rs  raydium.rs
DEX-arbitrage-oppt-scanner/solana-dex-scanner/src/models/: mod.rs  pool.rs  token.rs
DEX-arbitrage-oppt-scanner/solana-dex-scanner/src/utils/: mod.rs  price.rs  telegram.rs
