[package]
name = "dex_scanner"
version = "0.1.0"
edition = "2021"

[dependencies]
web3 = "0.19.0"
tokio = { version = "1.36.0", features = ["full"] }
dotenv = "0.15.0"
ethers = { version = "2.0.13", features = ["ws"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
teloxide = "0.12.2"
log = "0.4"
env_logger = "0.11.2"
anyhow = "1.0"
futures = "0.3"
colored = "2.1.0"
chrono = "0.4"
once_cell = "1.19" 