[package]
name = "solana-dex-scanner"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-client = "1.17"
solana-sdk = "1.17"
solana-program = "1.17"
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2.0"
teloxide = "0.12"
dotenv = "0.15"
futures = "0.3"
chrono = "0.4"
once_cell = "1.8"
log = "0.4"
env_logger = "0.10"
borsh = "0.10"
borsh-derive = "0.10"
reqwest = { version = "0.11", features = ["json"] }
